# multiquery

./: .gitignore  README.md
contracts/multiquery/: Cargo.toml
contracts/multiquery/src/: contract.rs  lib.rs  msg.rs
contracts/multiquery/src/testing/: custom_querier.rs  cw20_querier.rs  mod.rs  tests.rs
scripts/: 2_deploy.ts  3_migrate.ts  3_query_example.ts  4_query_example.ts  helpers.ts  package-lock.json
