[package]
name = "multiquery"
version = "0.1.0"
authors = ["larry <gm@larry.engineer>"]
edition = "2018"
license = "GPL-3.0-or-later"
repository = "https://github.com/st4k3h0us3/multiquery"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cosmwasm-std = { version = "0.16", features = ["staking"] }
schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }

[dev-dependencies]
cw20 = "0.9"
serde_json = "1.0"
